Datepicker: fix missing background color for selected day
* refs #87

--- a/src/main/webapp/css/datepicker.css
+++ b/src/main/webapp/css/datepicker.css
@@ -75,9 +75,8 @@
 
 /* INTERACTION / HOVER */
 .ui-datepicker-calendar td a:hover,
-.ui-datepicker-calendar td.halfworkday a:hover {
-  /*color: #5F5F5F !important;*/
+.ui-datepicker-calendar td.halfworkday a:hover,
+.ui-datepicker-calendar .ui-state-default.ui-state-active {
   color: #FAFAFA !important;
-  /*background: #BFBFBF !important;*/
   background: #7B7B7B !important;
 }
